--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=Rura0306!
-DB_NAME=lumina
-PORT=5000
+DB_HOST=bsrsohanufd43eqh7dwu-mysql.services.clever-cloud.com
+DB_USER=u9xrzcjr5l91zdiw
+DB_PASSWORD=jxVkj98iRVTACtUDC3Op!
+DB_NAME=bsrsohanufd43eqh7dwu
+PORT=3306
