--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=bsrsohanufd43eqh7dwu-mysql.services.clever-cloud.com
 DB_USER=u9xrzcjr5l91zdiw
-DB_PASSWORD=jxVkj98iRVTACtUDC3Op!
+DB_PASSWORD=jxVkj98iRVTACtUDC3Op
 DB_NAME=bsrsohanufd43eqh7dwu
 PORT=3306
